--- a/mobile_app/ios/Podfile
+++ b/mobile_app/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
-platform :ios, '12.0'
+platform :ios, '16.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -38,11 +38,28 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
     
-    # Firebase yêu cầu iOS 12.0+
+    # Firebase yêu cầu iOS 16.0+ (macOS 26 tương thích)
     target.build_configurations.each do |config|
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
-      # Fix for CocoaPods 1.16.2 bug with Ruby 3.4.4
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
+      
+      # Fix for CocoaPods 1.16.2+ bug with Ruby 3.4.4+ và macOS 26
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+      
+      # Fix cho macOS 26 và Xcode 16+
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
+      config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
+      
+      # Fix cho Firebase và network security
+      config.build_settings['OTHER_LDFLAGS'] = '$(inherited) -ObjC'
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] = '$(inherited) COCOAPODS=1'
+      
+      # Fix cho Swift compatibility
+      config.build_settings['SWIFT_VERSION'] = '5.0'
+      config.build_settings['CLANG_WARN_QUOTED_INCLUDE_IN_FRAMEWORK_HEADER'] = 'NO'
+      
+      # Fix cho macOS 26 và Xcode 16+
+      config.build_settings['DEVELOPMENT_TEAM'] = ''
+      config.build_settings['CODE_SIGN_STYLE'] = 'Automatic'
     end
   end
 end
